[package]
name = "azathoth-utils"
version = "0.1.0"
edition = "2024"
license="MIT"
repository = "https://github.com/AzathothC2/azathoth_utils"

[dependencies]
azathoth-core = "0.1.1"


[features]
default = ["psearch", "codec", "hasher", "formatter"]
psearch = []
codec = []
hasher = []
formatter = []
